--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ build-backend = "hatchling.build"
 
 [project]
 name = "py-xh-custapp-xethhung12"
-version = "0.0.7"
+version = "1.0.0"
 description = "Custom App Environment"
 readme = "README.md"
 requires-python = ">=3.11"
 classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
 license = "GPL-3.0-only"
 license-files = [ "LICEN[CS]E*",]
-dependencies = [ "j-vault-http-client-xethhung12 >= 0.1.1",]
+dependencies = [ "j-vault-http-client-xethhung12 >= 0.1.1", "pycryptodome",]
 [[project.authors]]
 name = "Xeth Hung"
 email = "admin@xethh.me"
